my_CDLNet/slurm/logs/slurm_4528367.err
Traceback (most recent call last):
  File "/vast/ee2178/Denoising-Diffusion-Project/my_CDLNet/train_mri_recon.py", line 10, in <module>
    from train_utils import awgn
  File "/vast/ee2178/Denoising-Diffusion-Project/my_CDLNet/train_utils.py", line 39
    x = torch.rand(len(input),1,1,1, device=input.device))
                                                         ^
SyntaxError: unmatched ')'
